--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
-<h1> JUDUL </h1>
-<p> paragraf </p>
-<!--- comment --->
-<a href= "https://Google.com">
-<img src="https://www.google.com/search?q=https://gambar+kucing&sxsrf=AOaemvIeG9cxlhJfemQWnONkgR9VnOlj_g:1631781661301&tbm=isch&source=iu&ictx=1&fir=axkySU2PmFGNjM%252Cz5Zq54f7K_IIeM%252C_&vet=1&usg=AI4_-kTkzJZqvuQAEeMcnLov_BM19feD-g&sa=X&ved=2ahUKEwjc9payjIPzAhW0umMGHQGNAooQ9QF6BAgPEAE#imgrc=EuU46lipWUAq5M>
-<ul> Daftar Harga 
-  <li> Buku </li>
-  <li> Pensil </li>
-</ul>
+<html>
+<marquee>Hi, My name is wahyu</marquee>
+  <head>Terimakasih</head>
+</html>
