--- a/index.html
+++ b/index.html
@@ -1,4 +1,71 @@
-<html>
-<marquee>Hi, My name is wahyu</marquee>
-  <head>Terimakasih</head>
-</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Progate</title>
+    <link rel="stylesheet" href="stylesheet.css">
+</head>
+<body>
+    <div class="header">
+        <div class="header-logo">Progate</div>
+        <div class="header-list">
+            <ul>
+              <li>Tentang</li>
+              <li>Pelajaran</li>
+              <li>Hubungi kami</li>
+            </ul>
+          </div>
+
+    </div>
+
+    <div class="main">
+        <div class="copy-container">
+            <h1>HELLO WORLD<span>.</span></h1>
+            <h2>Ayo belajar coding</h2>
+          </div>
+          <div class="contents">
+            <h3 class="section-title">Pelajaran</h3>
+            <div class="contents-item">
+                <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/html.svg">
+                <p>HTML & CSS</p>
+              </div>
+              <div class="contents-item">
+                <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/php.svg">
+                <p>PHP</p>
+              </div>
+              <div class="contents-item">
+                <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/ruby.svg">
+                <p>Ruby</p>
+              </div>
+              <div class="contents-item">
+                <img src="https://s3-ap-northeast-1.amazonaws.com/progate/shared/images/lesson/html/study/swift.svg">
+                <p>Swift</p>
+              </div>
+        
+        </div>
+        <div class="contact-form">
+            <h3 class="section-title">Hubungi kami</h3>
+            <p>Email (Wajib Diisi)</p>
+            <input>
+            <textarea></textarea>
+            <input class="contact-submit" type="submit" value="Kirim">
+        <p>Pesan (Wajib Diisi)</p>
+        <p>*Bidang wajib diisi.</p>
+        
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="footer-logo">Progate</div>
+        <div class="footer-list">
+          <ul>
+            <li>Tentang</li>
+            <li>Karier</li>
+            <li>Hubungi Kami</li>
+          </ul>
+        </div>
+      </div>
+    </body>
+  </html>
